task3/ingress/minio-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-app
spec:
  selector:
    app: minio
  ports:
    - port: 9001
