task3/ingress/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"   
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: minio-app
             port: 
                number: 9001
      - path: /web
        pathType: Prefix
        backend:
          service:
             name: web
             port: 
                number: 80
